--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -24,6 +24,7 @@
 	{{- if not .Site.IsServer }}
 		{{ template "_internal/google_analytics_async.html" . }}
 	{{- end }}
+	<link rel="stylesheet" href="/css/vs.css">
 </head>
 <body class="body">
 	<div class="container container--outer">
@@ -43,6 +44,8 @@
 		{{ partial "footer" . }}
 	</div>
 <script async defer src="{{ "js/menu.js" | relURL }}"></script>
+<script type="text/javascript" src="{{ "js/highlight.pack.js" | relURL }}"></script>
+<script type="text/javascript">hljs.initHighlightingOnLoad();</script>
 {{- partial "mathjax.html" . -}}
 </body>
 </html>
