--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -46,6 +46,7 @@
 <script async defer src="{{ "js/menu.js" | relURL }}"></script>
 <script type="text/javascript" src="{{ "js/highlight.pack.js" | relURL }}"></script>
 <script type="text/javascript">hljs.initHighlightingOnLoad();</script>
+<script data-ad-client="ca-pub-1947596544782119" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 {{- partial "mathjax.html" . -}}
 </body>
 </html>
