--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -24,6 +24,9 @@
 	{{- if not .Site.IsServer }}
 		{{ template "_internal/google_analytics_async.html" . }}
 	{{- end }}
+	{{ range .Site.Params.customJS -}}
+	<script defer src="{{ . | relURL }}"></script>
+	{{- end }}
 	<link rel="stylesheet" href="/css/syntax.css">
 </head>
 <body class="body">
@@ -45,6 +48,15 @@
 	</div>
 <script async defer src="{{ "js/menu.js" | relURL }}"></script>
 <script data-ad-client="ca-pub-1947596544782119" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-L5FSJ397HF"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-L5FSJ397HF');
+</script>
 {{- partial "mathjax.html" . -}}
 </body>
 </html>
